// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Open Composer CLI Component Snapshots ComposerApp renders correctly 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                   🎼 Open Composer CLI v0.1.0                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌────────────────────────────┐┌──────────────────────────────────────┐┌────────────────────────────┐
│                            ││                                      ││                            │
│ 📂 Workspaces              ││ 💬 Chat Interface                    ││ 📝 Code Editor             │
│                            ││                                      ││                            │
│ ● main                     ││ 🎼 composer 14:50                    ││ ┌──────────────────────┐   │
│                            ││  Welcome to Open Composer CLI! What  ││ │                      │   │
│                            ││ would you like to build?             ││ │                      │   │
│ 🌿 Branches                ││                                      ││ │   No file selected   │   │
│                            ││                                      ││ │                      │   │
│ ● main                     ││                                      ││ │                      │   │
│ + New worktree             ││                                      ││ └──────────────────────┘   │
│                            ││                                      ││                            │
│                            ││                                      ││ 🔧 File Tree               │
│ 🤖 Agents                  ││                                      ││                            │
│                            ││                                      ││ 📁 src/                    │
│ ● claude-code              ││ ┌──────────────────────────────────┐ ││   📄 index.ts              │
│ ○ codex-nation             ││ │💭 _                              │ ││   📁 components/           │
│ ○ cursor-agent             ││ └──────────────────────────────────┘ ││     📄 ComposerApp.tsx     │
│                            ││ Type your message and press Enter... ││     📄 ChatInterface.tsx   │
│                            ││                                      ││                            │
└────────────────────────────┘└──────────────────────────────────────┘└────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│Ready                                                                               Ctrl+C to exit│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`Open Composer CLI Component Snapshots ChatInterface renders correctly with messages 1`] = `
"
 💬 Chat Interface

 🤖 claude-code 10:00
  Hello, how can I help you?

 👤 You 10:01
  I need help with my code


 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │💭 _                                                                                            │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘
 Type your message and press Enter...
"
`;

exports[`Open Composer CLI Component Snapshots Sidebar renders correctly with worktrees 1`] = `
"
 📂 Workspaces

 ● main
 ○ feature-1


 🌿 Branches

 ● main
 + New worktree


 🤖 Agents

 ● claude-code
 ○ codex-nation
 ○ cursor-agent
"
`;

exports[`Open Composer CLI Component Snapshots CodeEditor renders correctly with file 1`] = `
"
 📝 Code Editor

 📄 src/index.ts

 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │                                                                                                │
 │ Code content will appear here...                                                               │
 │                                                                                                │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘

 🔧 File Tree

 📁 src/
   📄 index.ts
   📁 components/
     📄 ComposerApp.tsx
     📄 ChatInterface.tsx
"
`;

exports[`Open Composer CLI Component Snapshots CodeEditor renders correctly without file 1`] = `
"
 📝 Code Editor

 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐
 │                                                                                                │
 │                                                                                                │
 │                                        No file selected                                        │
 │                                                                                                │
 │                                                                                                │
 └────────────────────────────────────────────────────────────────────────────────────────────────┘

 🔧 File Tree

 📁 src/
   📄 index.ts
   📁 components/
     📄 ComposerApp.tsx
     📄 ChatInterface.tsx
"
`;

exports[`Open Composer CLI Component Snapshots Layout renders correctly 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                   🎼 Open Composer CLI v0.1.0                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Test content
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│Ready                                                                               Ctrl+C to exit│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;
